--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ certifi==2023.7.22
 chardet==5.2.0
 charset-normalizer==3.2.0
 click==8.1.7
+coverage==7.3.1
 Django==4.2.5
 django-filter==23.2
 djangorestframework==3.14.0
+freezegun==1.2.2
 idna==3.4
 importlib-metadata==6.8.0
 Jinja2==3.1.2
